We will have a total code re-writing at a later stage!

Changelog 1.0 RC2
=============
1 Bugfix for allowed editors in ICMS 1.1
2 added: _MD_UP on language/english/main.php (sato-san)
3 added: _MD_POSTTIME on language/english/main.php (sato-san)
4 added: german files with UTF-8  (sato-san)

Changelog 1.0 RC
Nov 6th, 2008 
=============
1 Bugfix for user signatures in ICMS 1.1
2 Added Built in RTL support
3 Removed need to have frameworks
4 Implemented (partly, it is not finished yet) easy-renaming
5 Changed PDF generator to TCPDF for UTF-8 languages
6 Added xoops-magazine image set as default
7 New icons (thanks McDonald And http://dryicons.com/)

==========================================================

CBB

XOOPS Community Bulletin Board

Changelog 3.08
Jan 3rd, 2007 
=============
1 Bugfix for user stats (jorff, agl)
2 Bugfix for reading new posts


Changelog 3.07
October 29th, 2006 
=============
1 Bugfix for permission template (js related)
2 Added support for FCKeditor upload
3 Added support for extended xcode which allows flash/wmplayer/...
4 Fix for XSS reported by bubuche93


Changelog 3.06
October 8th, 2006 
=============
Bugfix version


Changelog 3.05
July 22nd, 2006 
=============
1 Bugfix for notifying new replies for a specific topic
2 Bugfix for permission check when moving a post
3 Removed inherition of view mode and post order from system-wide preference
4 Added editor parameter control based on plugin'ed configs
5 Bugfix for xhtml compliance in forum selection box (reported by skalpa)
6 Bugfix for update scripts for newbb 2.2
7 Bugfix for category name display in permission admin
8 Bugfix for view_level check in viewforum template (reported by topmuzik.com)

Changelog 3.04 Final
June 3rd, 2006 
=============
1 MySQL syntax for data synchronization for different versions
2 xhtml fixes
3 bugfix for group permission check form (reported by Aries)

Changelog 3.04 RC4
May 27th, 2006 
=============