@@ -294,12 +294,14 @@
 <div class="clear"></div>
 
 <br />
+<br />
 
 <div style="padding: 5px; float: <{$smarty.const._GLOBAL_LEFT}>; text-align: <{$smarty.const._GLOBAL_LEFT}>;">
 <{$forum_addpoll}><{$forum_reply}>&nbsp;<{$forum_post_or_register}>
 </div>
 <div class="clear"></div>
 
+<br />
 <br />
 <br />
 
@@ -314,7 +316,6 @@
 <br />
 <br />
 <{/if}>
-
 <div>
 <div style="float: <{$smarty.const._GLOBAL_LEFT}>; text-align: <{$smarty.const._GLOBAL_LEFT}>;">
 <{foreach item=perm from=$permission_table}>
